feat: create home page layout

--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" href="/img/logo-principal-header.png" type="image/png">
+    <title>Inicio | Gino Li Salón & Spa</title>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    
+    q
 </body>
 </html>
