feat: implement home page structure (index.html and services.html)

--- a/public/index.html
+++ b/public/index.html
@@ -65,8 +65,8 @@
     <!-- FOOTER -->
     <footer>
         
-        <p>© 2026 | Gino Li Salón & Spa</p>
-        
+        <p>©2026 Gino Li Salón & Spa</p>
+
     </footer>
 
 </body>
