feat: implement home page structure (appointmets.html)

--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,10 @@
                 <p>Relájate y renueva tu energía.</p>
             </div>
 
+            <div>
+                <button>Ver más</button>
+            </div>
+
         </div>
         
     </section>
