feat: create appointment page and base booking structure

--- a/public/pages/appointments.html
+++ b/public/pages/appointments.html
@@ -34,23 +34,23 @@
 
             <!-- SERVICE -->
             <label for="service">Servicios</label>
-            <select id="service" required>
+            <select id="service" name='service' required>
                <option value="">Seleccione un servicio</option>
             </select>
 
             <!-- EMPLOYEES -->
             <label for="employee">Trabajador</label>
-            <select name="employee" required>
+            <select id="employee" name='employee' required>
                 <option value="">Seleccione un trabajador</option>
             </select>
 
             <!-- DATE -->
             <label for="date">Fecha</label>
-            <input type="date" id="date" required>
+            <input type="date" id="date" name='date' required>
 
             <!-- TIME -->
             <label for="time">Hora</label>
-            <select id="time" required>
+            <select id="time" name='date' required>
                 <option value="">Seleccione una hora</option>
             </select>
 
